Fix: table's horizontal scrolling

--- a/PBL3/sass/custom.scss
+++ b/PBL3/sass/custom.scss
@@ -180,6 +180,7 @@ $breadcrumb-active-color: $gray-900;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   border: 1px solid $gray-700;
+  min-width: 992px;
 }
 #tableSearchBox {
   background-color: $gray-600;
@@ -191,12 +192,16 @@ $breadcrumb-active-color: $gray-900;
   }
 
   border: 1px solid $gray-600;
-  margin: 28px 8px;
+  margin: 16px 8px;
 }
 
 #tableSearchBox:focus {
   outline: 2px solid $gray-600;
   background-color: $gray-800;
+}
+.tableData {
+  min-width: 992px;
+  overflow-x: hidden;
 }
 .tableData > table.table td,
 .tableData > table.table th {
